# MACCO-General

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  advanced_benchmarks.py  analyze_results.py  baselines.py  benchmark_suite.py  classic23_benchmarks.py  pyproject.toml  run_advanced.py  run_benchmarks.py  run_classic23.py  run_experiments.py  run_gwo_diagnostic.py  strong_baselines.py
.github/workflows/: tests.yml
docs/: SCOPE.md
examples/: compare_optimizers.py  quick_start.py  visualize_convergence.py
macco/: __init__.py  delayed.py  hybrid.py  low_rank.py  optimizer.py
tests/: test_optimizer.py
