[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macco-general"
version = "0.3.0"
description = "Lightweight consensus and low-rank subspace optimizers for bounded continuous optimization"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "fangjianzhi"}]
keywords = ["optimization", "black-box", "metaheuristic", "subspace"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/fangjianzhi/MACCO-General"
Repository = "https://github.com/fangjianzhi/MACCO-General"
Issues = "https://github.com/fangjianzhi/MACCO-General/issues"

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["macco*"]
